<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">


    <View
        android:id="@+id/viewContactos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/contenedor_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgTelefonoContacto"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cont_tel"
        app:layout_constraintBottom_toBottomOf="@+id/imgContacto"
        app:layout_constraintStart_toEndOf="@+id/imgContacto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreContacto"
        app:srcCompat="@drawable/ic_phone" />

    <ImageView
        android:id="@+id/imgNombreContacto"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/cont_nom"
        app:layout_constraintStart_toEndOf="@+id/imgContacto"
        app:layout_constraintTop_toTopOf="@+id/imgContacto"
        app:srcCompat="@drawable/ic_person" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgContacto"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/contImgContacto"
        app:layout_constraintBottom_toBottomOf="@id/viewContactos"
        app:layout_constraintStart_toStartOf="@id/viewContactos"
        app:layout_constraintTop_toTopOf="@id/viewContactos" />

    <TextView
        android:id="@+id/tvNombreContacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgNombreContacto"
        app:layout_constraintEnd_toStartOf="@+id/imgNextContactos"
        app:layout_constraintStart_toEndOf="@+id/imgNombreContacto"
        app:layout_constraintTop_toTopOf="@+id/imgNombreContacto" />

    <TextView
        android:id="@+id/tvTelefonoContacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imgTelefonoContacto"
        app:layout_constraintEnd_toStartOf="@+id/imgNextContactos"
        app:layout_constraintStart_toEndOf="@+id/imgTelefonoContacto"
        app:layout_constraintTop_toTopOf="@+id/imgTelefonoContacto" />

    <ImageView
        android:id="@+id/imgNextContactos"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cont_next"
        app:layout_constraintBottom_toBottomOf="@+id/imgContacto"
        app:layout_constraintEnd_toEndOf="@id/viewContactos"
        app:layout_constraintTop_toTopOf="@+id/imgContacto"
        app:srcCompat="@drawable/ic_next" />
</androidx.constraintlayout.widget.ConstraintLayout>